--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "framer-motion": "^10.15.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.2"
+    "react-router-dom": "^6.14.2",
+    "tailwindcss-border-gradients": "^2.0.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
