--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint-plugin-react-refresh": "^0.4.1",
     "postcss": "^8.4.27",
     "tailwindcss": "^3.3.3",
+    "tailwindcss-gradients": "^3.0.0",
     "vite": "^4.4.0"
   }
 }
