--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gsap": "^3.12.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^1.3.0",
     "react-intersection-observer": "^9.5.2",
     "react-router-dom": "^6.14.2"
   },
