--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "v1.0.0",
+  "name": "vickyay-v1.0.0",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -12,6 +12,7 @@
   "dependencies": {
     "@studio-freight/lenis": "^1.0.23",
     "@vercel/analytics": "^1.0.1",
+    "clsx": "^2.1.0",
     "framer-motion": "^10.15.1",
     "gsap": "^3.12.2",
     "react": "^18.2.0",
