--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
+    "react-hot-toast": "^2.4.1",
     "react-intersection-observer": "^9.5.2",
     "react-router-dom": "^6.14.2"
   },
