trying to fix dependencies issue

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vickyay-v1.0.0",
+  "name": "VickJay-v1.0.0",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -13,6 +13,8 @@
     "@studio-freight/lenis": "^1.0.23",
     "@vercel/analytics": "^1.0.1",
     "clsx": "^2.1.0",
+    "eslint": "^8.57.1",
+    "eslint-plugin-react": "^7.33.1",
     "framer-motion": "^10.15.1",
     "gsap": "^3.12.2",
     "react": "^18.2.0",
@@ -27,8 +29,6 @@
     "@types/react-dom": "^18.2.6",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.20",
-    "eslint": "^9.10.0",
-    "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.1",
     "postcss": "^8.4.27",
