--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint-plugin-react-hooks": "^4.6.2",
     "framer-motion": "^10.15.1",
     "gsap": "^3.12.2",
+    "lenis": "^1.1.13",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
