--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "VickJay-v1.0.0",
+  "name": "VickJay",
   "private": true,
   "version": "0.0.0",
+  "license": "MIT",
   "type": "module",
   "scripts": {
     "dev": "vite --host",
@@ -33,6 +34,7 @@
     "eslint-plugin-react-refresh": "^0.4.1",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.13",
-    "vite": "^5.4.7"
+    "vite": "^5.4.7",
+    "vite-plugin-sitemap": "^0.7.1"
   }
 }
