--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "autoprefixer": "^10.4.20",
     "eslint-plugin-react-refresh": "^0.4.1",
     "postcss": "^8.4.47",
+    "rollup-plugin-terser": "^7.0.2",
     "tailwindcss": "^3.4.13",
     "vite": "^5.4.7",
     "vite-plugin-sitemap": "^0.7.1"
