--- a/package.json
+++ b/package.json
@@ -19,12 +19,12 @@
     "framer-motion": "^11.5.6",
     "gsap": "^3.12.2",
     "lenis": "^1.1.13",
-    "react": "^19.0.0",
+    "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.5",
     "react-hot-toast": "^2.4.1",
     "react-intersection-observer": "^9.5.2",
-    "react-router-dom": "^7.0.1"
+    "react-router-dom": "^6.x.x"
   },
   "devDependencies": {
     "@types/react": "^19.0.1",
