--- a/package.json
+++ b/package.json
@@ -24,18 +24,18 @@
     "react-helmet-async": "^2.0.5",
     "react-hot-toast": "^2.4.1",
     "react-intersection-observer": "^9.5.2",
-    "react-router-dom": "^6.x.x"
+    "react-router-dom": "^7.0.1"
   },
   "devDependencies": {
-    "@types/react": "^19.0.1",
-    "@types/react-dom": "^19.0.2",
+    "@types/react": "^18.2.14",
+    "@types/react-dom": "^18.2.6",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.20",
     "eslint-plugin-react-refresh": "^0.4.1",
     "postcss": "^8.4.47",
     "rollup-plugin-terser": "^7.0.2",
     "tailwindcss": "^3.4.13",
-    "vite": "^6.0.6",
+    "vite": "^5.4.7",
     "vite-plugin-sitemap": "^0.7.1"
   }
 }
